# FZY

./: .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat  log.txt  package-lock.json  package.json
editor/: CMakeLists.txt  main.c
engine/: CMakeLists.txt
engine/include/: defines.h  engine.h  fzy.h  test.h
engine/include/core/: application.h  asserts.h  clock.h  fzy_event.h  fzy_file.h  fzy_hashtable.h  fzy_input.h  fzy_logger.h  fzy_memory.h  fzy_queue.h  fzy_string.h  fzy_timer.h  fzy_vector.h  logger.h  timer.h
engine/include/math/: fzy_math.h
engine/include/renderer/: fzy_window.h  renderer.h  renderer_types.h  window.h
engine/include/renderer/opengl/: gl_backend.h  gl_mesh.h  gl_shader.h  gl_texture.h  gl_types.h
engine/include/resources/: fzy_image.h  fzy_resource_manager.h  fzy_resource_types.h
engine/src/: engine.c  fzy.c
engine/src/core/: application.c  clock.c  fzy_event.c  fzy_file.c  fzy_hashtable.c  fzy_input.c  fzy_logger.c  fzy_memory.c  fzy_queue.c  fzy_string.c  fzy_timer.c  fzy_vector.c  logger.c  timer.c
engine/src/math/: fzy_math.c
engine/src/renderer/: fzy_window.c  renderer.c  window.c
engine/src/renderer/opengl/: gl_backend.c  gl_mesh.c  gl_shader.c  gl_texture.c  opengl_window.c
engine/src/resources/: fzy_image.c  fzy_resource_manager.c
game/: CMakeLists.txt  main.c
src/: FZY.js
src/core/: Ecs.js  Engine.js  GL.js  GLBuffer.js  Geometry.js  Manager.js  Mesh.js  Shader.js
src/core/ecs/: Ecs.js
src/core/gl/: GL.js  GLBuffer.js  GLUtil.js  (+4 more)
src/math/: MathUtils.js  Quaternion.js  Vector2.js  Vector3.js
(+14 files in other folders)
